added caching to getCustomerByID
